--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://unpkg.com/clipboard@2.0.0/dist/clipboard.min.js"></script>
 
   </head>
   <body>
