폰트 크기 조절

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <div class="title-wrap">
-      <h1 class="title"><img src="./images/logo-webchips.svg" width="24" height="24"> WebChips</h1>
+      <h1 class="title"><img src="./images/logo-webchips.svg" width="30" height="30" /> WebChips</h1>
       <p class="description">
         <strong>Webchips</strong> is a free color collection for using in applications for digital display.<br />
         All colors are gathered by Mungyu Kim.<br />
