--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/wantone.css">
+    <link rel="stylesheet" href="css/webchips_mungyukim.css">
 
     <!-- Bootstrap Core JavaScript -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
