--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
     <meta name="ROBOTS" content="ALL">
     <meta name="format-detection" content="telephone=no">
+    <meta name="keywords" content="color,colors,palette,colorchart,pantone,webcolor,appcolor,colorcollection">
+    <meta name="description" content="Webchips is a free color collection for using in applications for digital display.">
+
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -23,7 +26,7 @@
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title itemprop="name">Webchips</title>
+    <title itemprop="name">Webchips | The color collection for digital design</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/common.css">
