페이스북 꺠짐 해결

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <li><a href="https://dribbble.com/mungyukim"><img src="./images/icon-dribbble.svg" width="24" height="24"></a></li>
         <li><a href="https://www.linkedin.com/in/mungyu-kim-077055146/"><img src="./images/icon-linkedin.svg" width="24" height="24"></a></li>
       </ul>
-      <p>
+      <div style="height: 30px;">
         <div class="fb-like" data-href="https://kimmungyu.github.io" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-      </p>
+      </div>
     </div>
     <div class="chips">
       <div class="color-tone" id="toneGray">
