--- a/BrandingEmbold/index.html
+++ b/BrandingEmbold/index.html
@@ -176,7 +176,7 @@
               <div class="col-md-12">
                 <h4 class="block-title">Usage</h4>
                 <div>
-                  <object type="image/svg+xml" data="/svg/embold_color_usage.svg" width="100%"></object>
+                  <object type="image/svg+xml" data="./svg/embold_color_usage.svg" width="100%"></object>
                 </div>
               </div>
             </div>
