--- a/BrandingEmbold/index.html
+++ b/BrandingEmbold/index.html
@@ -46,6 +46,7 @@
               <div class="col-md-6">
                 <h4 class="block-title">B/W Logo</h4>
                 <div class="bw-logo"></div>
+                <p>K 98% / PANTONE Black 7 U</p>
               </div>
             </div>
           </section>
