--- a/BrandingEmbold/index.html
+++ b/BrandingEmbold/index.html
@@ -17,7 +17,7 @@
   <body>
   	<div class="container">
   		<div class="row">
-  			<div class="col-md-12">
+  			<div class="col-md-8 col-md-offset-1">
           <!-- paragraph split -->
           <section id="1">
           <div class="paragraph-body row">
