--- a/BrandEmbold/index.html
+++ b/BrandEmbold/index.html
@@ -287,6 +287,15 @@
                     </div>
                   </div>
                 </div>
+                <div>
+                  <h4 class="block-title">Atom Syntax Theme</h4>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <img src="./img/embold-syntax-screenshot.png" width="100%" height="auto" style="border-bottom: 1px solid #efefef;" />
+                      <p class="image-description"><input type="button" value="Download Theme" class="btn btn-default btn-lg" style="margin-top: 16px;" onclick="javascript:location.href='./attachment/embold-syntax.zip'"/></p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
