--- a/BrandEmbold/index.html
+++ b/BrandEmbold/index.html
@@ -273,17 +273,21 @@
                     All applications(inc. Digital and Printed matters) for embold must be design by this guideline (e.g Colors, Visual styles.).
                   </p>
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                       <img src="./img/1_eat_your_dog_food.png" width="100%" height="auto" />
                       <p class="image-description">Internal Campaign</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                       <img src="./img/2_toc_g2crowd_1.png" width="100%" height="auto" />
                       <p class="image-description">Review text from external services</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                       <img src="./img/3_sentinel.png" width="100%" height="auto" />
                       <p class="image-description">Internal Campaign</p>
+                    </div>
+                    <div class="col-md-3">
+                      <img src="./img/4_we_are_writing_the_future.png" width="100%" height="auto" />
+                      <p class="image-description">External Slogan</p>
                     </div>
                   </div>
                 </div>
