--- a/BrandEmbold/index.html
+++ b/BrandEmbold/index.html
@@ -83,13 +83,13 @@
                 </p>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-12">
                 <div class="color-tones">
                   <div class="color-tone" id="neutral">
                     <h4 class="block-title">Neutral</h4>
                     <div class="row">
-                      <div class="color-block col-md-12" v-for="item in items" v-if="colorTone='neutral'">
-                        <div class="color-chip">
+                      <div class="color-block col-md-3" v-for="item in items" v-if="colorTone='neutral'">
+                        <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
                             <span class="color-hex">{{ item.colorHex }}</span>
@@ -101,13 +101,13 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="color-tones">
                   <div class="color-tone" id="blue">
                     <h4 class="block-title">Blue</h4>
                     <div class="row">
-                      <div class="color-block col-md-12" v-for="item in items" v-if="colorTone='blue'">
-                        <div class="color-chip">
+                      <div class="color-block col-md-6" v-for="item in items" v-if="colorTone='blue'">
+                        <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
                             <span class="color-hex">{{ item.colorHex }}</span>
@@ -119,13 +119,13 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="color-tones">
                   <div class="color-tone" id="orange">
                     <h4 class="block-title">Orange</h4>
                     <div class="row">
-                      <div class="color-block col-md-12" v-for="item in items" v-if="colorTone='orange'">
-                        <div class="color-chip">
+                      <div class="color-block col-md-6" v-for="item in items" v-if="colorTone='orange'">
+                        <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
                             <span class="color-hex">{{ item.colorHex }}</span>
@@ -142,7 +142,7 @@
                 <h3 class="paragraph-title">Secondary Colors</h3>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="color-tones">
                   <div class="color-tone" id="green">
                     <h4 class="block-title">Green</h4>
@@ -160,7 +160,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="color-tones">
                   <div class="color-tone" id="Red">
                     <h4 class="block-title">Red</h4>
@@ -178,7 +178,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="color-tones">
                   <div class="color-tone" id="Purple">
                     <h4 class="block-title">Purple</h4>
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="color-tones">
                   <div class="color-tone" id="Mint">
                     <h4 class="block-title">Mint</h4>
@@ -214,7 +214,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="color-tones">
                   <div class="color-tone" id="Yellow">
                     <h4 class="block-title">Yellow</h4>
@@ -232,7 +232,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="color-tones">
                   <div class="color-tone" id="Light-brown">
                     <h4 class="block-title">Light-brown</h4>
