--- a/BrandEmbold/index.html
+++ b/BrandEmbold/index.html
@@ -30,7 +30,7 @@
           <div class="paragraph-body row">
             <div class="col-md-12">
               <div class="logo-main"></div>
-              <h5 class="title-description">Design Library / 15 Jan. 2019</h5>
+              <h5 class="title-description">Design Library / Last update : 21 Jan. 2019</h5>
             </div>
           </div>
           </section>
@@ -64,9 +64,7 @@
               <div class="col-md-12">
                 <h3 class="paragraph-title">Typefaces</h3>
                 <div>
-                  <p>
-                    Still work in progress
-                  </p>
+                  <img src="./svg/21012019_typeface.svg" width="100%" height="auto" style="border: 1px solid #eff2f4; margin-top: 16px;" />
                 </div>
               </div>
             </div>
@@ -83,12 +81,12 @@
                 </p>
               </div>
               <!-- color tone -->
-              <div class="col-md-12">
+              <div class="col-md-12 col-xs-12">
                 <div class="color-tones">
                   <div class="color-tone" id="neutral">
                     <h4 class="block-title">Neutral</h4>
                     <div class="row">
-                      <div class="color-block col-md-3" v-for="item in items" v-if="colorTone='neutral'">
+                      <div class="color-block col-md-3 col-xs-12" v-for="item in items" v-if="colorTone='neutral'">
                         <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
@@ -101,12 +99,12 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-6">
+              <div class="col-md-6 col-xs-12">
                 <div class="color-tones">
                   <div class="color-tone" id="blue">
                     <h4 class="block-title">Blue</h4>
                     <div class="row">
-                      <div class="color-block col-md-6" v-for="item in items" v-if="colorTone='blue'">
+                      <div class="color-block col-md-6 col-xs-12" v-for="item in items" v-if="colorTone='blue'">
                         <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
@@ -119,12 +117,12 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-6">
+              <div class="col-md-6 col-xs-12">
                 <div class="color-tones">
                   <div class="color-tone" id="orange">
                     <h4 class="block-title">Orange</h4>
                     <div class="row">
-                      <div class="color-block col-md-6" v-for="item in items" v-if="colorTone='orange'">
+                      <div class="color-block col-md-6 col-xs-12" v-for="item in items" v-if="colorTone='orange'">
                         <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
@@ -142,7 +140,7 @@
                 <h3 class="paragraph-title">Secondary Colors</h3>
               </div>
               <!-- color tone -->
-              <div class="col-md-3">
+              <div class="col-md-3 col-xs-12">
                 <div class="color-tones">
                   <div class="color-tone" id="green">
                     <h4 class="block-title">Green</h4>
@@ -160,7 +158,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-3">
+              <div class="col-md-3 col-xs-12">
                 <div class="color-tones">
                   <div class="color-tone" id="Red">
                     <h4 class="block-title">Red</h4>
@@ -178,7 +176,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-3">
+              <div class="col-md-3 col-xs-12">
                 <div class="color-tones">
                   <div class="color-tone" id="Purple">
                     <h4 class="block-title">Purple</h4>
@@ -196,7 +194,7 @@
                 </div>
               </div>
               <!-- color tone -->
-              <div class="col-md-3">
+              <div class="col-md-3 col-xs-12">
                 <div class="color-tones">
                   <div class="color-tone" id="Mint">
                     <h4 class="block-title">Mint</h4>
@@ -296,7 +294,6 @@
                   <div class="row">
                     <div class="col-md-12">
                       <img src="./img/embold-syntax-screenshot.png" width="100%" height="auto" style="border-bottom: 1px solid #efefef;" />
-                      <p class="image-description"><input type="button" value="Download Theme" class="btn btn-default btn-lg" style="margin-top: 16px;" onclick="javascript:location.href='./attachment/embold-syntax.zip'"/></p>
                     </div>
                   </div>
                 </div>
