--- a/BrandEmbold/index.html
+++ b/BrandEmbold/index.html
@@ -90,7 +90,11 @@
                         <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
-                            <span class="color-hex">{{ item.colorHex }}</span>
+                            <span class="color-hex">Hex {{ item.colorHex }}</span><br />
+                            <span>{{ item.colorCMYK }}</span>
+                          </div>
+                          <div class="color-chip-desc">
+                            {{ item.description }}
                           </div>
                         </div>
                       </div>
@@ -108,7 +112,11 @@
                         <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
-                            <span class="color-hex">{{ item.colorHex }}</span>
+                            <span class="color-hex">Hex {{ item.colorHex }}</span><br />
+                            <span>{{ item.colorCMYK }}</span>
+                          </div>
+                          <div class="color-chip-desc">
+                            {{ item.description }}
                           </div>
                         </div>
                       </div>
@@ -126,7 +134,11 @@
                         <div class="color-chip-primary-color">
                           <div class="color-box-main" :class="[ item.colorCode ]">
                             <span class="color-name">{{ item.colorName }}</span>
-                            <span class="color-hex">{{ item.colorHex }}</span>
+                            <span class="color-hex">Hex {{ item.colorHex }}</span><br />
+                            <span>{{ item.colorCMYK }}</span>
+                          </div>
+                          <div class="color-chip-desc">
+                            {{ item.description }}
                           </div>
                         </div>
                       </div>
