--- a/BrandEmbold/index_fonts_pack.html
+++ b/BrandEmbold/index_fonts_pack.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/embold-fonts-pack.css">
-    <title>embold Fonts Competition :)</title>
+    <title>Font for embold</title>
   </head>
   <body>
     <div class="container">
       <div>
-        <h1 class="title">embold Fonts Competition :)</h1>
+        <h1 class="title">Font for embold</h1>
         <p class="header-available-service">By <b>Mungyu Kim</b> / Published in Jan 22. 2019</p>
       </div>
       <div class="section">
