진짜진짜 마지막

--- a/BrandEmbold/index_fonts_pack.html
+++ b/BrandEmbold/index_fonts_pack.html
@@ -23,6 +23,7 @@
       <div class="section">
         <div>
           <h2>Candidates</h2>
+          <h4>Please select a font name to see the detail information</h4>
         </div>
         <div class="section-candidates">
           <div class="block-candidate">
