--- a/BrandEmbold/index_fonts_pack.html
+++ b/BrandEmbold/index_fonts_pack.html
@@ -48,6 +48,13 @@
             </div>
             <a href="https://fonts.adobe.com/fonts/benton-sans" target="_blank" class="link-to-typekit">Go to Typekit</a>
           </div>
+          <div class="block-candidate">
+            <div class="sofia-pro btn-candidate" onclick="window.open('./font_pack_sofia.html','_blank');">
+              <span class="title">Sofia Pro</span>
+              <span class="description">Available from Typekit</span>
+            </div>
+            <a href="https://fonts.adobe.com/fonts/sofia" target="_blank" class="link-to-typekit">Go to Typekit</a>
+          </div>
         </div>
       </div>
       <div class="section">
