Add some information

--- a/BrandEmbold/font_pack_upgrade.html
+++ b/BrandEmbold/font_pack_upgrade.html
@@ -17,6 +17,10 @@
       <h2>Font Style</h2>
       <div class="block fs">
         <h5 class="print-visible">Style and Weight</h5>
+        <p class="summary">
+           <b>Font style</b><br />
+           Upgrade
+        </p>
         <p class="fs-light">
           Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz<br />
           1 2 3 4 5 6 7 8 9 0<br />
