--- a/BrandEmbold/index_fonts_pack.html
+++ b/BrandEmbold/index_fonts_pack.html
@@ -15,7 +15,7 @@
         <h2>Requirements</h2>
         <ul class="list-requirements">
             <li>Font must can use in both of Digital and Printed Materials<br />(Except a Mobile App. I think the best font in Mobile App is a SYSTEM font.)</li>
-            <li>It must have a good visibility and readability</li>
+            <li>It must have a good visibility and legibility</li>
             <li>It must have a little unique style to be identified</li>
             <li>Sans-serif style have a good usability than Serif style, especially in Digital Display *</li>
         </ul>
