--- a/BrandEmbold/index_fonts_pack.html
+++ b/BrandEmbold/index_fonts_pack.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/embold-fonts-pack.css">
+    <script src="./node_modules/simple-lightbox/src/simpleLightbox.js"></script>
     <title>Font for embold</title>
   </head>
   <body>
@@ -22,25 +23,16 @@
       </div>
       <div class="section">
         <div>
+          <h2>Compare Fonts</h2>
+          Launch the Comparing Tool
+        </div>
+      </div>
+      <div class="section">
+        <div>
           <h2>Candidates</h2>
           <h4>Please select a font name to see the detail information</h4>
         </div>
         <div class="section-candidates">
-          <div class="block-candidate">
-            <div class="upgrade btn-candidate" onclick="window.open('./font_pack_upgrade.html','this');">
-              <span class="title">Upgrade<br />
-              Upgrade Light</span>
-              <span class="description">Available from Typekit</span>
-            </div>
-            <a href="https://fonts.adobe.com/fonts/upgrade" target="_blank" class="link-to-typekit">Go to Typekit</a>
-          </div>
-          <div class="block-candidate">
-            <div class="interstate btn-candidate" onclick="window.open('./font_pack_interstate.html','_blank');">
-              <span class="title">Interstate</span>
-              <span class="description">Available from Typekit</span>
-            </div>
-            <a href="https://fonts.adobe.com/fonts/interstate" target="_blank" class="link-to-typekit">Go to Typekit</a>
-          </div>
           <div class="block-candidate">
             <div class="benton-sans btn-candidate" onclick="window.open('./font_pack_benton.html','_blank');">
               <span class="title">Benton Sans</span>
