--- a/BrandEmbold/font_pack_benton.html
+++ b/BrandEmbold/font_pack_benton.html
@@ -92,8 +92,8 @@
       </div>
       <div>
         <h5 class="print-visible">Example: Official Documents</h5>
-        <a href="letter-sofia.pdf" class="btn btn-full-width " target="_blank">Download Sample of Official Letter</a>
-        <a href="gamma_template_sofia.pdf" class="btn btn-full-width " target="_blank">Download Sample of PPT</a>
+        <a href="letter-benton.pdf" class="btn btn-full-width " target="_blank">Download Sample of Official Letter</a>
+        <a href="gamma_template_benton.pdf" class="btn btn-full-width " target="_blank">Download Sample of PPT</a>
       </div>
     </div>
     <div class="section-last">
