--- a/BrandEmbold/index_fonts_pack.html
+++ b/BrandEmbold/index_fonts_pack.html
@@ -24,7 +24,7 @@
       <div class="section">
         <div>
           <h2>Compare Fonts</h2>
-          Launch the Comparing Tool
+          <a href="compare-fonts.html" target="_blank" class="btn btn-full-width">Launch the Comparing Page (Benton Sans vs Sofia Pro)</a>
         </div>
       </div>
       <div class="section">
