--- a/BrandEmbold/font_pack_benton.html
+++ b/BrandEmbold/font_pack_benton.html
@@ -83,7 +83,7 @@
           <span class="pm-font-size pm-font-size-14">
             We believe software should be transparent
           </span>
-          <span class="description">Font size 13px in Display, 13pt in Print</span>
+          <span class="description">Font size 10px in Display, 10pt in Print</span>
         </p>
       </div>
       <div class="block">
@@ -93,7 +93,7 @@
       <div>
         <h5 class="print-visible">Example: Official Documents</h5>
         <a href="letter-benton.pdf" class="btn btn-full-width " target="_blank">Download Sample of Official Letter</a>
-        <a href="gamma_template_benton.pdf" class="btn btn-full-width " target="_blank">Download Sample of PPT</a>
+        <!-- <a href="gamma_template_benton.pdf" class="btn btn-full-width " target="_blank">Download Sample of PPT</a> -->
       </div>
     </div>
     <div class="section-last">
