--- a/BrandEmbold/index_fonts_pack.html
+++ b/BrandEmbold/index_fonts_pack.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div>
         <h1 class="title">Font for embold</h1>
-        <p class="header-available-service">By <b>Mungyu Kim</b> / Published in Jan 22. 2019</p>
+        <p class="header-available-service">Proposer : Vivek Reghunath, Prachiti Edgaonkar, Mungyu Kim / Published By <b>Mungyu Kim</b> / Published in Jan 22. 2019</p>
       </div>
       <div class="section">
         <h2>Requirements</h2>
@@ -23,16 +23,17 @@
       </div>
       <div class="section">
         <div>
-          <h2>Compare Fonts</h2>
-          <a href="compare-fonts.html" target="_blank" class="btn btn-full-width">Launch the Comparing Page (Benton Sans vs Sofia Pro)</a>
-        </div>
-      </div>
-      <div class="section">
-        <div>
           <h2>Candidates</h2>
           <h4>Please select a font name to see the detail information</h4>
         </div>
         <div class="section-candidates">
+          <div class="block-candidate">
+            <div class="acumin btn-candidate" onclick="window.open('./font_pack_acumin.html','_blank');">
+              <span class="title">Acumin Pro</span>
+              <span class="description">Available from Typekit</span>
+            </div>
+            <a href="https://fonts.adobe.com/fonts/acumin" target="_blank" class="link-to-typekit">Go to Typekit</a>
+          </div>
           <div class="block-candidate">
             <div class="benton-sans btn-candidate" onclick="window.open('./font_pack_benton.html','_blank');">
               <span class="title">Benton Sans</span>
@@ -41,12 +42,39 @@
             <a href="https://fonts.adobe.com/fonts/benton-sans" target="_blank" class="link-to-typekit">Go to Typekit</a>
           </div>
           <div class="block-candidate">
+            <div class="gill-sans btn-candidate" onclick="window.open('./font_pack_gill_sans.html','_blank');">
+              <span class="title">Gill Sans Nova</span>
+              <span class="description">Available from Typekit</span>
+            </div>
+            <a href="https://fonts.adobe.com/fonts/gill-sans-nova" target="_blank" class="link-to-typekit">Go to Typekit</a>
+          </div>
+          <div class="block-candidate">
+            <div class="montserrat btn-candidate" onclick="window.open('./font_pack_montserrat.html','_blank');">
+              <span class="title">Montserrat</span>
+              <span class="description">Available from Typekit</span>
+            </div>
+            <a href="https://fonts.adobe.com/fonts/montserrat" target="_blank" class="link-to-typekit">Go to Typekit</a>
+          </div>
+          <div class="block-candidate">
+            <div class="proxima btn-candidate" onclick="window.open('./font_pack_proxima.html','_blank');">
+              <span class="title">Proxima Nova</span>
+              <span class="description">Available from Typekit</span>
+            </div>
+            <a href="https://fonts.adobe.com/fonts/proxima-nova" target="_blank" class="link-to-typekit">Go to Typekit</a>
+          </div>
+          <div class="block-candidate">
             <div class="sofia-pro btn-candidate" onclick="window.open('./font_pack_sofia.html','_blank');">
               <span class="title">Sofia Pro</span>
               <span class="description">Available from Typekit</span>
             </div>
             <a href="https://fonts.adobe.com/fonts/sofia" target="_blank" class="link-to-typekit">Go to Typekit</a>
           </div>
+        </div>
+      </div>
+      <div class="section">
+        <div>
+          <h2>Compare Fonts</h2>
+          <a href="compare-fonts.html" target="_blank" class="btn btn-full-width">Launch the Comparing Page (Benton Sans vs Sofia Pro)</a>
         </div>
       </div>
       <div class="section">
